# Stripe-Payment-Demo

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy_railway.yml
app/app/: settings.py  urls.py
app/stripe_payment/: admin.py  forms.py  models.py  urls.py  views.py
app/stripe_payment/migrations/: 0001_initial.py  0002_alter_item_id.py  0003_alter_item_price.py  0004_alter_item_price.py
app/templates/stripe_payment/: cancel.html  item_buy.html
